few more CSS and JS enhancements

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,3 +35,15 @@ h5 {
 	text-align: center;
 	padding: 20%;
 }
+
+.gif {
+	cursor:pointer;
+}
+
+.card {
+	margin: 10px;
+}
+
+.cardBody{
+	margin: 10px;
+}
